--- a/Python/수업/데이터마이닝/homework/Report7_digitsClassification_서지희.ipynb
+++ b/Python/수업/데이터마이닝/homework/Report7_digitsClassification_서지희.ipynb
@@ -1,15 +1,116 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## Report 7. digits classification 연습\n",
+    "Report 7. sklearn에서 제공한 필기체 숫자 데이터를 이용하여 decision tree와 random forest 알고리즘으로 분류문제를 해결하세요\n",
+    "- 데이터: sklearn.datasets.load_digits()\n",
+    "- 성능확인: 5-fold cross validation의 평균값 확인\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    ""
-   ]
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import load_digits\n",
+    "from sklearn.model_selection import cross_val_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "digits = load_digits()\n",
+    "X = digits.data\n",
+    "y = digits.target"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5-fold cross validation 평균값: 0.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree = DecisionTreeClassifier(max_depth=4, random_state=0)\n",
+    "tree.fit(X, y)\n",
+    "\n",
+    "scores = cross_val_score(tree, X, y, cv=5)\n",
+    "print(\"5-fold cross validation 평균값: {:.2f}\".format(scores.mean()))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5-fold cross validation 평균값: 0.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "forest.fit(X, y)\n",
+    "\n",
+    "scores = cross_val_score(forest, X, y, cv=5)\n",
+    "print(\"5-fold cross validation 평균값: {:.2f}\".format(scores.mean()))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
